// 고객·프로젝트·사이트 정규화 구조
// DoWeb content_raw 호환 JSON은 이 구조에서 직렬화한다.
// password/token/private key 원문은 저장하지 않는다.

Table customers {
  id bigint [pk]
  source_content_idx uuid [unique]
  name varchar(200) [not null]
  status varchar(30) [not null]
  memo text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table customer_contacts {
  id bigint [pk]
  customer_id bigint [not null]
  contact_type varchar(30) [not null]
  contact_name varchar(100)
  contact_value varchar(320) [not null]
  is_primary boolean [not null, default: false]
  is_active boolean [not null, default: true]
  sort_order smallint [not null, default: 0]
}

Table members {
  id bigint [pk]
  source_member_idx uuid [unique]
  name varchar(100) [not null]
  status varchar(30) [not null]
}

Table projects {
  id bigint [pk]
  source_content_idx uuid [unique]
  customer_id bigint [not null]
  title varchar(250) [not null]
  status varchar(30) [not null]
  tags text [not null, note: '공백 구분; category_* 등 검색용 태그']
  memo text
}

Table sites {
  id bigint [pk]
  source_content_idx uuid [unique]
  project_id bigint [not null]
  primary_receiver_id bigint
  site_type varchar(30) [not null, note: 'production/development/staging/other']
  status varchar(30) [not null]
  tags text [not null, note: 'hosting_*, domain_*, frame_*, server_*']
  inspection_memo text
}

Table providers {
  id bigint [pk]
  provider_type varchar(30) [not null]
  name varchar(200) [not null]
  website varchar(2048)
}

Table site_endpoints {
  id bigint [pk]
  site_id bigint [not null]
  provider_id bigint
  endpoint_role varchar(30) [not null]
  url varchar(2048) [not null]
  is_primary boolean [not null, default: false]
}

Table site_access_accounts {
  id bigint [pk]
  site_id bigint [not null]
  protocol varchar(20) [not null]
  auth_method varchar(20) [not null]
  login_id varchar(255)
  secret_ref varchar(255) [not null]
  status varchar(30) [not null]
}

Table site_notes {
  id bigint [pk]
  site_id bigint [not null]
  note_type varchar(30) [not null]
  content text [not null]
}

Ref: customer_contacts.customer_id > customers.id
Ref: projects.customer_id > customers.id
Ref: sites.project_id > projects.id
Ref: sites.primary_receiver_id > members.id
Ref: site_endpoints.site_id > sites.id
Ref: site_endpoints.provider_id > providers.id
Ref: site_access_accounts.site_id > sites.id
Ref: site_notes.site_id > sites.id
